--- a/style.css
+++ b/style.css
@@ -1,22 +1,81 @@
+* {
+    padding: 0;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+}
 body {
     margin: 0;
     display: grid;
     grid-template-columns: 300px 1fr;
     grid-template-rows: 200px auto;
     height: 100vh;
+    height: 100svh;
 }
 
 .header {
-    grid-column: 1/3;
+    padding: 1rem 2rem;
+    grid-column: 2/3;
     grid-row: 1/2;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: 1fr 1fr;
+    align-items: center;
 }
+.header-top, .header-bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.header-bottom .buttons {
+    display: flex;
+    gap: 2rem;
+}
+
 .sidebar {
+    padding: 2rem;
     grid-column: 1/2;
     grid-row: 1/3;
     background-color: rgb(105, 185, 255);
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto 1fr;
+    font-size: 2rem;
+    font-weight: bold;
+    color: white;
+}
+.sidebar .nav {
+    font-size: 1.5rem;
+    font-weight: bold;
 }
 .main {
+    padding: 2rem;
     grid-column: 2/3;
     grid-row: 2/3;
     background-color: rgb(201, 212, 231);
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: min-content 1fr;
+    gap: 2rem;
+}
+.card {
+    padding: 2rem;
+    background-color: rgb(241, 241, 241);
+}
+.projects-container {
+    grid-column: 1/2;
+    grid-row: 1/3;
+}
+.cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-auto-rows: 250px;
+    gap: 2rem;
+}
+.project.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.card-buttons {
+    align-self: flex-end;
 }
