--- a/style.css
+++ b/style.css
@@ -36,17 +36,35 @@ body {
     grid-column: 1/2;
     grid-row: 1/3;
     background-color: rgb(105, 185, 255);
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto 1fr;
     font-size: 2rem;
     font-weight: bold;
     color: white;
 }
 .sidebar .nav {
-    font-size: 1.5rem;
+    display: grid;
+    grid-template-columns: 2rem 1fr;
+    grid-template-rows: min-content 1fr;
+    column-gap: 1.2rem;
+    row-gap: 1.4rem;
+    align-items: center;
+    font-size: 1.2rem;
     font-weight: bold;
 }
+.nav .logo {
+    font-size: 1.8rem;
+    margin-bottom: 2rem;
+}
+.sidebar img {
+    height: 1.8rem;
+    filter: invert(1); /* Invert svg images' colors */
+}
+.nav :first-child {
+    height: 2.8rem;
+}
+.settings {
+    margin-top: 2rem;
+}
+
 .main {
     padding: 2rem;
     grid-column: 2/3;
