--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     --sidebar: rgb(105, 185, 255);
 }
 * {
+    box-sizing: border-box;
     padding: 0;
     margin: 0;
     font-family: 'Roboto', sans-serif;
@@ -51,9 +52,50 @@ input[id="search"] {
     border-radius: 5rem;
     width: min(80%, 700px);
 }
+.profile-bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.profile-bar p {
+    width: max-content;
+    font-weight: bold;
+}
+.profile-picture {
+    height: 2.5rem;
+    border-radius: 50%;
+    margin: 0 1rem 0 3rem;
+}
+.profile .profile-picture {
+    margin: 0;
+    height: 4.5rem;
+}
+.profile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+.greeting {
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+.greeting p + p {
+    font-size: 1.5rem;
+    margin-top: 0.5rem;
+}
 .header-bottom .buttons {
     display: flex;
     gap: 2rem;
+}
+.buttons div {
+    color: white;
+    background-color: var(--sidebar);
+    width: 6rem;
+    border-radius: 2rem;
+    padding: 0.7rem 1rem;
+    text-align: center;
+    font-weight: bold;
 }
 
 .sidebar {
