Change sidebar nav to list elements & add shadows

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     --gray-1: rgb(241, 241, 241);
     --gray-2: rgb(92, 87, 84);
     --sidebar: rgb(105, 185, 255);
+    --sidebar-2: rgb(68, 166, 252);
     --card-border: rgb(254, 103, 21);
 }
 * {
@@ -30,6 +31,8 @@ body {
     grid-template-rows: 1fr 1fr;
     align-items: center;
     background-color: var(--gray-1);
+    z-index: 1;
+    box-shadow: 0px 0px 19px 0px rgba(0, 0, 0, 0.3);
 }
 .header-top, .header-bottom {
     display: flex;
@@ -100,6 +103,10 @@ input[id="search"] {
     padding: 0.7rem 1rem;
     text-align: center;
     font-weight: bold;
+    cursor: pointer;
+}
+.buttons div:hover {
+    background-color: var(--sidebar-2);
 }
 
 /* Sidebar section */
@@ -111,8 +118,9 @@ input[id="search"] {
     font-size: 2rem;
     font-weight: bold;
     color: white;
+    z-index: 2;
 }
-.sidebar .nav {
+/* .sidebar .nav {
     display: grid;
     grid-template-columns: 2rem 1fr;
     grid-template-rows: min-content 1fr;
@@ -121,19 +129,35 @@ input[id="search"] {
     align-items: center;
     font-size: 1.2rem;
     font-weight: bold;
+} */
+.nav h1 {
+    display: flex;
+    align-items: center;
+    gap: 0.7rem;
+    font-size: 1.8rem;
+    margin-bottom: 3rem;
+}
+.nav li {
+    list-style: none;
+    display: flex;
+    gap: 1.2rem;
+    align-items: center;
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-bottom: 1.5rem;
 }
 .nav .logo {
+    height: 2.8rem;
     font-size: 1.8rem;
-    margin-bottom: 2rem;
+}
+.nav li img {
+    height: 1.8rem;
 }
 img {
     height: 1.8rem;
 }
 .sidebar img {
     filter: invert(1); /* Invert svg images' colors */
-}
-.nav :first-child {
-    height: 2.8rem;
 }
 .settings {
     margin-top: 2rem;
@@ -149,6 +173,7 @@ img {
     grid-template-columns: 3fr 1fr;
     grid-template-rows: min-content 1fr;
     gap: 2rem;
+    overflow: auto;
 }
 .card p {
     color: var(--gray-2);
@@ -157,6 +182,7 @@ img {
     padding: 2rem;
     background-color: var(--gray-1);
     border-radius: 0.6rem;
+    box-shadow: 3px 3px 10px 0px rgb(0 0 0 / 20%)
 }
 .projects-container {
     grid-column: 1/2;
